cpp main and warning fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,17 @@ project(whpp-play)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -O0 -DDEBUG -Wall -Wuninitialized -Wsign-compare -Wno-missing-braces")
-set(CMAKE_CXX_FLAGS_RELEASE "-ggdb -O3 -DNDEBUG -Wall -Wuninitialized -Wsign-compare -Wno-missing-braces")
+set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -O0 -DDEBUG -Wall -Werror -Wuninitialized -Wsign-compare -Wno-missing-braces")
+set(CMAKE_CXX_FLAGS_RELEASE "-ggdb -O3 -DNDEBUG -Wall -Werror -Wuninitialized -Wsign-compare -Wno-missing-braces")
 
 if (APPLE)
         message("OSX")
         set(ENV{PKG_CONFIG_PATH} "/usr/local/Cellar/icu4c/71.1/lib/pkgconfig")
+        set(LDFLAGS="-L/usr/local/opt/libsoup@2/lib -lsoup-2.4")
+        set(SOUP_INCLUDE_DIRS "/usr/local/opt/libsoup@2/include/libsoup-2.4")
+
+else()
+        pkg_check_modules(SOUP REQUIRED libsoup-2.4)
         
 endif()
 
@@ -17,10 +22,9 @@ pkg_search_module(GLIB REQUIRED glib-2.0)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 pkg_check_modules(GSTREAMER_WEBRTC REQUIRED gstreamer-webrtc-1.0)
 pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.0)
-pkg_check_modules(SOUP REQUIRED libsoup-3.0)
 
 set(FILES
-        main.c
+        main.cpp
 )
 
 add_executable(whpp-play ${FILES})
